<resources>
    <string name="app_name">RecipeApp</string>
    <string name="txt_name">Hero Finneas-Tiffin</string>
    <string name="txt_email">herofinneas@gmail.com</string>
    <string name="txt_more">More</string>
    <string name="txt_top_menu">Top Menu</string>
    <string name="txt_nasi_goreng">Nasi Goreng</string>
    <string name="txt_sate">Sate</string>
    <string name="txt_siomai">Siomai</string>
    <string name="txt_batagor">Batagor</string>
    <string name="txt_soto">Soto</string>
    <string name="txt_gudeg">Gudeg</string>
    <string name="txt_gado_gado">Gado - Gado</string>
    <string name="txt_bakso">Bakso</string>
    <string name="txt_imageview">ImageView</string>
    <string name="txt_bakmi">Bakmi</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="txt_description">Description</string>
    <string-array name="data_name">
        <item>Onigiri</item>
        <item>Churro</item>
        <item>Salmon Nigiri Sushi</item>
        <item>Omelette</item>
        <item>Bakso manis pedas</item>
        <item>Roti Bakar</item>
        <item>Salad Buah</item>
        <item>Kentang goreng</item>
        <item>Fried Potato Wadges</item>
        <item>Es lilin</item>
        <item>Pudding</item>
        <item>Tempe</item>
        <item>Tahu</item>
        <item>Tumis Kangkung</item>
        <item>Ikan Asin</item>
        <item>Indomie kuah</item>
        <item>Indomie Goreng</item>
        <item>Seblak</item>
        <item>Tahu Bulat</item>
        <item>Sate Taichan</item>
        <item>Sushi</item>
        <item>Roti Kukus</item>
        <item>Pancake</item>
        <item>Gado-Gado</item>
        <item>Chicken Karage</item>
    </string-array>
    <string-array name="data_description">
        <item>Onigiri adalah nama Jepang untuk makanan berupa nasi yang dipadatkan sewaktu masih hangat sehingga berbentuk segitiga, bulat, atau seperti karung beras. Dikenal juga dengan nama lain omusubi, istilah yang kabarnya dulu digunakan kalangan wanita di istana kaisar untuk menyebut onigiri. Onigiri dimakan dengan tangan, tidak memakai sumpit.</item>
        <item>Churro adalah sebuah makanan ringan berbahan dasar pastri dough goreng, biasanya choux. Churro adalah hidangan tradisional di Spanyol dan Portugal, dimana hidangan tersebut berasal, serta Filipina dan Ibero-Amerika.</item>
        <item>Sushi ini disajikan dengan nasi yang di atasnya diberi potongan ikan.</item>
        <item>Telur dadar atau omelet adalah variasi hidangan telur goreng yang disiapkan dengan cara mengocok telur dan menggorengnya dengan minyak goreng atau mentega panas di sebuah wajan.</item>
        <item>bakso dengan saus manis pedas andalan anak kos</item>
        <item>Roti panggang merujuk kepada kepingan roti yang dibakar atau dipanggang dengan proses radiasi termal sehingga roti menjadi lebih kecoklatan dan garing. Warna kecoklatan adalah hasil dari reaksi Maillard mengubah rasa roti dan membuatnya lebih kering sehingga lebih mudah untuk menaburkan topping di atasnya.</item>
        <item>Koktail buah atau salad buah adalah makanan yang dibuat dari potongan buah dan sirup, dan disajikan dingin. Walaupun namanya mirip dengan minuman beralkohol yang disebut "koktail", koktail buah sama sekali tidak dicampur atau mengandung alkohol.</item>
        <item>Kentang goreng adalah hidangan yang dibuat dari potongan-potongan kentang yang digoreng dalam minyak goreng panas. Di dalam menu rumah-rumah makan, kentang goreng yang dipotong panjang-panjang dan digoreng dalam keadaan terendam di dalam minyak goreng panas disebut French fries.</item>
        <item>Diterjemahkan dari bahasa Inggris-Irisan kentang adalah irisan kentang, sering kali berukuran besar dan tidak dikupas, yang dipanggang atau digoreng. Mereka dijual di rumah makan dan restoran cepat saji. Di Australia, potato wedges adalah makanan bar yang umum, yang hampir selalu disajikan dengan krim asam dan saus sambal manis.</item>
        <item>Es loli atau es lilin adalah makanan penyegar berupa es dengan batang kayu sebagai alat untuk dipegang. Makanan ini dibuat dari cairan minuman berwarna dan berasa yang diberi batang kayu lalu dibekukan. Ketika membeku, es loli dimakan dengan memegang stik kayu.</item>
        <item>Puding adalah sebuah hidangan penutup yang umumnya dibuat dari bahan-bahan yang direbus, dikukus, atau dipanggang. Istilah puding juga dapat dipakai untuk berbagai jenis pai yang berisi campuran lemak hewan, daging, atau buah-buahan yang dipanggang, direbus, atau dikukus. </item>
        <item>Tempe adalah makanan khas Indonesia yang terbuat dari fermentasi terhadap biji kedelai atau beberapa bahan lain yang menggunakan beberapa jenis kapang Rhizopus, seperti Rhizopus oligosporus, Rh. oryzae, Rh. stolonifer, atau Rh. arrhizus. Sediaan fermentasi ini secara umum dikenal sebagai "ragi tempe".</item>
        <item>Tahu adalah makanan yang dibuat dari endapan perasan biji kedelai yang mengalami koagulasi. Tahu berasal dari Tiongkok, seperti halnya kecap, tauco, bakpau, dan bakso. Nama "tahu" merupakan serapan dari bahasa Hokkian, yang secara harfiah berarti "kedelai terfermentasi"</item>
        <item>Diterjemahkan dari bahasa Inggris-Aduk bayam air goreng adalah hidangan sayur Asia umum dari bayam air tumis. </item>
        <item>Ikan asin adalah bahan makanan yang terbuat dari daging ikan yang diawetkan dengan menambahkan banyak garam.</item>
        <item>Mie rebus/Mi rebus atau mee rebus adalah sebuah hidangan mi kuah dari Asia Tenggara, yang dikenal di Indonesia, Malaysia, dan Singapura. Hidangan tersebut juga biasa disebut mie kuah.</item>
        <item>Mi goreng berarti "mi yang digoreng" adalah makanan yang berasal dari Indonesia yang populer dan juga digemari di Malaysia, dan Singapura. </item>
        <item>Seblak adalah makanan Indonesia yang dikenal berasal dari Bandung, Jawa Barat yang bercita rasa gurih dan pedas. Terbuat dari kerupuk basah yang dimasak dengan sayuran dan sumber protein seperti telur, ayam, boga bahari atau olahan daging sapi, dan dimasak dengan kencur.</item>
        <item>Tahu bulat adalah sebuah jajanan kaki lima berupa olahan kacang kedelai yang dibuat menjadi sebuah tahu berbentuk bulat dengan isi kopong. Biasanya, tahu bulat dijual di sebuah mobil bak terbuka dan kebanyakan dihargai Rp500 per buah.</item>
        <item>Sate taichan adalah sebuah varian sate yang berisi daging ayam yang dibakar tanpa baluran bumbu kacang atau kecap seperti sate pada umumnya.</item>
        <item>Sushi atau sushi adalah makanan Jepang yang terdiri dari nasi yang dibentuk bersama lauk berupa makanan laut, daging, sayuran mentah atau sudah dimasak.</item>
        <item>Roti kukus adalah sejenis roti, biasanya dibuat dari gandum, yang disiapkan dengan mengukus, bukan dipanggang.</item>
        <item>Pancake adalah kue dadar yang dibuat dari terigu, telur ayam, gula dan susu. Bahan-bahan dicampur dengan air membentuk adonan kental yang digoreng di atas wajan datar yang diolesi sedikit minyak.</item>
        <item>Gado-gado adalah salah satu makanan khas yang berasal dari Indonesia yang berupa sayur-sayuran yang direbus dan dicampur jadi satu, dengan bumbu kacang atau sausdari kacang tanah dan yang dihaluskan disertai irisan telur dan pada umumnya banyak yang menambahkan kentang rebus yang sudah dihaluskan untuk dicampurbumbu kacang, kentang rebus dimasak bersama dengan bumbu kacang kemudian di atasnya ditaburi bawang goreng. Sedikit emping goreng atau kerupuk(ada juga yang memakai kerupuk udang) juga ditambahkan.</item>
        <item>Chicken karage adalah fillet ayam balut tepung bumbu yang digoreng krispi.</item>
    </string-array>
</resources>