<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_ptofile"
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_80dp"
            android:src="@drawable/photo_profile"
            />
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_name"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_light"
            android:layout_marginTop="@dimen/_16dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:fontFamily="@font/poppins_thin"
                android:textSize="@dimen/_16sp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btn_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_more"
                android:layout_weight="2"
                />
        </LinearLayout>
        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_32dp"
            android:background="@android:color/darker_gray"
            />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_top_menu"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_16dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_nasi_goreng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nasi_goreng"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"/>
            <TextView
                android:id="@+id/tv_sate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sate"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"/>
            <TextView
                android:id="@+id/tv_siomai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_siomai"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"/>
            <TextView
                android:id="@+id/tv_batagor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_batagor"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"
                android:maxLines="1"
                android:ellipsize="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_soto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_soto"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"/>
            <TextView
                android:id="@+id/tv_gudeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_gudeg"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"/>
            <TextView
                android:id="@+id/tv_gado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_gado_gado"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"/>
            <TextView
                android:id="@+id/tv_bakso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bakso"
                android:layout_margin="@dimen/_4dp"
                android:background="@drawable/shape_text"
                android:maxLines="1"
                android:ellipsize="end"/>
        </LinearLayout>
        <View
            android:id="@+id/bottom_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_32dp"
            android:background="@android:color/darker_gray"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</ScrollView>